# scalable-python-api

./: Dockerfile  Dockerfile.original  README.md  docker-compose.yml  pyproject.toml
deploy/: deployment.yml  kustomization.yml  namespace.yml  secret.yml  service.yml  values.yml
deploy/charts/postgresql-15.5.3/postgresql/: Chart.yaml
src/blazing/: __init__.py  db.py  main.py
src/blazing/models/: pokemon.py
src/blazing/routes/: pokemon.py
test/: test_pokemon.py
