[project]
name = "blazing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "juanda", email = "juandavidgo1997@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "psycopg2-binary>=2.9.11",
    "sqlmodel>=0.0.31",
]

[project.scripts]
blazing = "blazing:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
